The job search, day 12

--- a/ds/practice/daily_practice/20-07/20-07-07-189-tue.ipynb
+++ b/ds/practice/daily_practice/20-07/20-07-07-189-tue.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 20-07-06: Daily Practice"
+    "# 20-07-07: Daily Practice"
    ]
   },
   {
@@ -16,17 +16,17 @@
     "\n",
     "## Daily practices\n",
     "\n",
-    "* [x] [Practice & learn](#Practice-&-learn)\n",
+    "* [ ] [Practice & learn](#Practice-&-learn)\n",
     "  * [x] Coding, algorithms & data structures\n",
     "  * [x] Data science: access, manipulation, analysis, visualization\n",
-    "  * [x] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
+    "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
     "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
     "  * [ ] Interview questions (out loud)\n",
     "* [ ] [Meta-data: reading & writing](#Meta-data:-reading-&-writing)\n",
     "  * [ ] Blog\n",
     "  * [ ] Social media discussions\n",
-    "* [ ] [2-Hour Job Search](#2-Hour-Job-Search)\n",
-    "  * [ ] LAMP List\n",
+    "* [x] [2-Hour Job Search](#2-Hour-Job-Search)\n",
+    "  * [x] LAMP List\n",
     "  * [x] Online networking"
    ]
   },
@@ -46,8 +46,13 @@
    "source": [
     "---\n",
     "\n",
-    "### Coding, algorithms & data structures\n",
-    "\n",
+    "### Coding, algorithms & data structures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### [Permutations (medium)](https://leetcode.com/problems/permutations/)\n",
     "\n",
     "Given a collection of distinct integers, return all possible permutations.\n",
@@ -90,41 +95,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "four_in = [1, 2, 3, 4]\n",
-    "\n",
-    "four_in = [\n",
-    "    [4, 3, 2, 1],\n",
-    "    [4, 3, 1, 2],\n",
-    "    [4, 2, ]\n",
-    "    \n",
-    "    [1, 2, 3, 4],\n",
-    "    [1, 2, 4, 3],\n",
-    "    [1, 3, 2, 4],\n",
-    "    [1, 3, 4, 2],\n",
-    "    [1, 4, 2, 3],\n",
-    "    [1, 4, 3, 2],\n",
-    "    \n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nums = [1, 2, 3]\n",
-    "\n",
-    "[1] [2, 3]\n",
-    "[1] [2] [3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from typing import List\n",
     "\n",
     "def permute(nums: List[int]) -> List[List[int]]:\n",
@@ -147,31 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n",
-      "[1, 2, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "nums = [1, 2, 3]\n",
-    "\n",
-    "print(nums[:1])\n",
-    "print(nums[0:])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I didn't quite finish this problem today, but will continue working on it tomorrow (without looking for a solution)."
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -179,12 +128,7 @@
    "source": [
     "---\n",
     "\n",
-    "### Data science\n",
-    "\n",
-    "* Access\n",
-    "* Manipulation\n",
-    "* Analysis\n",
-    "* Visualization"
+    "### Data science"
    ]
   },
   {
@@ -193,25 +137,17 @@
    "source": [
     "#### Data manipulation with pandas\n",
     "\n",
-    "##### Chapter 2: Aggregating Data (review)\n",
+    "##### Chapter 4: Creating and visualizing DataFrames (review)\n",
     "\n",
     "Topics reviewed:\n",
     "\n",
-    "* `.agg()` method\n",
-    "* Cumulative statistics\n",
-    "* Counting\n",
-    "* Grouping and grouped summary statistics\n",
-    "* Pivot tables\n",
-    "\n",
-    "##### Chapter 3: Indexing and Slicing (review)\n",
-    "\n",
-    "Topics reviewed:\n",
-    "\n",
-    "* Explicit indexes\n",
-    "  * Sorting by index\n",
-    "  * Multi-level indexes\n",
-    "* Slicing and indexing\n",
-    "* Subsetting and slicing pivot tables"
+    "* Visualization\n",
+    "  * Bar plots\n",
+    "  * Line plots\n",
+    "  * Scatter plots\n",
+    "* Handling missing values\n",
+    "* Creating DataFrames\n",
+    "* Reading and writing CSVs"
    ]
   },
   {
@@ -223,7 +159,7 @@
     "### Engineering\n",
     "\n",
     "* SQL\n",
-    "* (Py)Spark / Scala\n",
+    "* PySpark\n",
     "* APIs\n",
     "* Test-driven development\n",
     "* Object-oriented practice"
@@ -233,49 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Scala\n",
-    "\n",
-    "Spent ~1.5 hours researching how to set up a Scala environment on my machine. The Coursera course I'm going to be auditing shows how to set it up in IntelliJ. However, I want to use VSCode. Luckily, there is a (supposedly) good extension called Metals. I went through the initial steps of configuring my system for that."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "### Machine learning\n",
-    "\n",
-    "* Scikit-learn\n",
-    "* TensorFlow / PyTorch"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I did not practice with any ML tools today."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "### Interview questions\n",
-    "\n",
-    "> Answer common interview questions **_out loud_**.\n",
-    "\n",
-    "* Technical: DS, ML, SE\n",
-    "* Behavioral"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I practiced my algorithms problem solving by talking out loud while working through the above Permutations problem."
+    "I decided on the next project I'm going to build, which will involve all of the above, and much more."
    ]
   },
   {
@@ -285,45 +179,38 @@
     "---\n",
     "---\n",
     "\n",
-    "## Meta-data: reading & writing\n",
-    "\n",
-    "* Blog post\n",
-    "* Social media discussion"
+    "## 2-Hour Job Search"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aside from the online networking and a couple of tweets, I did not spend much time being active on social media. I also did not work on the Image Segmentation blog post today."
+    "### Networking\n",
+    "\n",
+    "I reached out to a handful of connections to reconnect and inquire about potential leads, and posted another of my Workshop articles to LinkedIn and Facebook.\n",
+    "\n",
+    "#### Post Here\n",
+    "\n",
+    "Anyone who's used Reddit can attest to the fact that there is a subreddit for literally everything and anything. And that the site can be a very powerful tool, useful for far more than just entertainment—if used correctly.\n",
+    "\n",
+    "Post Here is a project I worked on with the goal of taking the guesswork out of posting to Reddit. I worked on the recommender system that analyzes prospective posts and recommends the most appropriate subreddits for each.\n",
+    "\n",
+    "This project taught me a lot about scope management. The team didn't have the resources to train a system on all 1,000 subreddits in the dataset (let alone the multitude of others not contained in the dataset), nor to deploy such a large model if we had done so. And as was the case with my other Build Week projects, we only had 4 days of work to train, build, and deploy.\n",
+    "\n",
+    "More details in my Workshop:\n",
+    "\n",
+    "https://tobias.fyi/workshop/post-here/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "---\n",
+    "### Informational\n",
     "\n",
-    "## 2-Hour Job Search\n",
-    "\n",
-    "* LAMP List\n",
-    "* Online networking"
+    "Had an informal informational interview that was very...informational. And he's just a great guy, willing and able to help me out during this process."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Online networking\n",
-    "\n",
-    "Spent a good chunk of time today responding to messages on LinkedIn from people who responded to my initial outreach. This outreach is mostly to reconnect and learn from those who are either in the field already, know someone who is, or has some sort of insight into good practices and the like."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
