Minor update to daily template

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -24,10 +24,10 @@
     "  * [ ] Interview questions (out loud)\n",
     "* [ ] [Meta-data: reading & writing](#Meta-data:-reading-&-writing)\n",
     "  * [ ] Blog\n",
-    "  * [ ] Social media discussions\n",
     "* [ ] [2-Hour Job Search](#2-Hour-Job-Search)\n",
     "  * [ ] LAMP List\n",
-    "  * [ ] Online networking"
+    "  * [ ] Networking\n",
+    "  * [ ] Social media"
    ]
   },
   {
@@ -170,7 +170,7 @@
     "## 2-Hour Job Search\n",
     "\n",
     "* LAMP List\n",
-    "* Online networking"
+    "* Networking"
    ]
   },
   {
