Started a central list of interview practice problems and questions for data science, will do machine learning as well

--- a/ds/practice/interview_prep/interview_questions.ipynb
+++ b/ds/practice/interview_prep/interview_questions.ipynb
@@ -20,7 +20,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Interview Questions\n",
+    "\n",
+    "* What is the central limit theorem and why is it important?\n",
+    "* What is sampling? Explain two different sampling methods.\n",
+    "* What is the difference between type I / type II errors?\n",
+    "* What is linear regression?\n",
+    "  * For the following terms, meaning and significance:\n",
+    "    * p-value?\n",
+    "    * coefficient?\n",
+    "    * r-squared?\n",
+    "  * What are the assumptions required for linear regression?\n",
+    "* What is a statistical interaction?"
+   ]
   },
   {
    "cell_type": "markdown",
