Minor update to template

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -62,6 +62,27 @@
    "source": [
     "---\n",
     "\n",
+    "### Interview questions\n",
+    "\n",
+    "> Answer common interview questions **_out loud_**.\n",
+    "\n",
+    "* Technical: DS, ML, SE\n",
+    "* Behavioral"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
     "### Data science\n",
     "\n",
     "* Access\n",
@@ -123,25 +144,6 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "### Interview questions\n",
-    "\n",
-    "> Answer common interview questions **_out loud_**.\n",
-    "\n",
-    "* Technical: DS, ML, SE\n",
-    "* Behavioral"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
     "---\n",
     "\n",
     "## Meta-data: reading & writing\n",
@@ -170,6 +172,7 @@
     "## 2-Hour Job Search\n",
     "\n",
     "* LAMP List\n",
+    "* Job applications\n",
     "* Networking"
    ]
   },
