--- a/ds/projects/blog/image_segmentation_manipulation/image_seg_binary_mask.ipynb
+++ b/ds/projects/blog/image_segmentation_manipulation/image_seg_binary_mask.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Resources\n",
+    "## Resources and Related Content\n",
     "\n",
     "* [Mask R-CNN](https://github.com/matterport/Mask_RCNN/)\n",
     "  * [Mask R-CNN Shiny](https://github.com/huuuuusy/Mask-RCNN-Shiny)\n",
@@ -69,6 +69,26 @@
    "source": [
     "---\n",
     "\n",
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TL;DR\n",
+    "\n",
+    "The goal of this tutorial is to describe a possible method of creating binary masks for one or more objects in an image by using an image segmentation (computer vision) model.\n",
+    "\n",
+    "Rather than drawing binary masks completely by hand or use proprietary software like Photoshop I will show you how to automate the process using completely free, open-source tools. Namely, we will be using Python along with a few open-source libraries such as NumPy, OpenCV (opencv-python), and PyTorch. Don't get intimidated by the names or the libraries—the process really just comes down to writing a function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
     "## The Problem\n",
     "\n",
     "Selecting and separating parts of an image can be a tedious, time-consuming process. Anyone who's done a fair amount of tinkering with image manipulation using a program like Photoshop knows the struggle.\n",
@@ -77,7 +97,7 @@
     "\n",
     "So, say I'd like to cut myself out of the photo below in order to paste into another image. In other words, I want to make all the pixels in the image transparent except for the ones representing me.\n",
     "\n",
-    "[[ImageBlock :: assets/input_images/suited_sunset.jpg]]\n",
+    "> [[ImageBlock :: Original image of Hobbes - hobbes_01.jpg]]\n",
     "\n",
     "To accomplish this manually, I could spend anywhere from a few minutes to an hour outlining myself in the original image, mostly by hand. The time investment depends on how easily-separable the subject is from the rest of the image, how accurate I want the cut to be, and what tools are available to me. Regarding that last point, the magicians at Adobe have done some rather impressive black magic with Photoshop, giving users very quick and very effective methods for selecting parts of an image.\n",
     "\n",
@@ -85,13 +105,11 @@
     "\n",
     "A mask is basically a method of distinguishing/selecting/separating pixels. If you've never heard the term used this way before, one way to think about it is with masking tape and paint. Typically, one would put masking tape—i.e. create a \"mask\"—around areas on a wall that should _not_ be painted. This is essentially what a mask is doing in any photo manipulation software: indicating what areas of an image to affect or transform (or which areas not to do so).\n",
     "\n",
+    "> [[ImageBlog :: Mask Overlay]]\n",
+    "\n",
     "A binary mask is a method of masking which uses a two-tone color scheme, to indicate the areas of an image to be affected and not affected. By overlaying a binary mask on top of the original image, the boundaries between the two colors can be used to affect the different areas of the image differently, whether that is making pixels transparent (removing them) or applying some sort of effect or transformation.\n",
     "\n",
-    "> [[ImageBlock :: Binary Mask of Missing Friend - half regular image, half binary mask]]\n",
-    "\n",
-    "The goal of this article is to describe a possible method of creating binary masks for one or more objects in an image by using an image segmentation (computer vision) model. Rather than drawing binary masks completely by hand or use proprietary software like Photoshop I will show you how to automate the process using completely free, open-source tools.\n",
-    "\n",
-    "Namely, we will be using Python along with a few libraries such as OpenCV-Python and TensorFlow. Don't get intimidated by the names or the libraries—the process really just comes down to writing a function."
+    "> [[ImageBlock :: Binary Mask - half regular image, half binary mask]]"
    ]
   },
   {
@@ -119,8 +137,57 @@
    "source": [
     "### Mask R-CNN\n",
     "\n",
-    "Although the primary framework used in this article is Matterport's TensorFlow-based implementation of a Mask R-CNN, this process should be translatable to other image segmentation models as well. In fact, at the end of this post I go over using a PyTorch-based image segmentation framework called Detectron2 to accomplish the exact same thing."
+    "Although the primary framework used in this article is Detectron2, this process should be translatable to other image segmentation models as well. In fact, at the end of this post I go over using Matterport's TensorFlow-based implementation of Mask R-CNN to accomplish the exact same thing.\n",
+    "\n",
+    "> TODO: Also do this with [fastai](https://docs.fast.ai/vision.image.html#ImageSegment)?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "\n",
+    "## Tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment Setup\n",
+    "\n",
+    "I will be walking through setup and execution using Google Colab. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
