Minor simplification of daily template

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -16,19 +16,39 @@
     "\n",
     "## Daily practices\n",
     "\n",
+    "* [ ] [Meta-data: reading & writing](#Meta-data:-reading-&-writing)\n",
     "* [ ] [Practice & learn](#Practice-&-learn)\n",
     "  * [ ] Coding, algorithms & data structures\n",
     "  * [ ] Data science: access, manipulation, analysis, visualization\n",
     "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
     "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
     "  * [ ] Interview questions (out loud)\n",
-    "* [ ] [Meta-data: reading & writing](#Meta-data:-reading-&-writing)\n",
-    "  * [ ] Blog\n",
     "* [ ] [2-Hour Job Search](#2-Hour-Job-Search)\n",
     "  * [ ] LAMP List\n",
     "  * [ ] Networking\n",
-    "  * [ ] Social media"
+    "  * [ ] Social media\n",
+    "  * [ ] Job applications"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "\n",
+    "## Meta-data: reading & writing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -62,12 +82,7 @@
    "source": [
     "---\n",
     "\n",
-    "### Interview questions\n",
-    "\n",
-    "> Answer common interview questions **_out loud_**.\n",
-    "\n",
-    "* Technical: DS, ML, SE\n",
-    "* Behavioral"
+    "### Interview questions"
    ]
   },
   {
@@ -83,12 +98,7 @@
    "source": [
     "---\n",
     "\n",
-    "### Data science\n",
-    "\n",
-    "* Access\n",
-    "* Manipulation\n",
-    "* Analysis\n",
-    "* Visualization"
+    "### Data science"
    ]
   },
   {
@@ -104,13 +114,7 @@
    "source": [
     "---\n",
     "\n",
-    "### Engineering\n",
-    "\n",
-    "* SQL\n",
-    "* PySpark\n",
-    "* APIs\n",
-    "* Test-driven development\n",
-    "* Object-oriented practice"
+    "### Engineering"
    ]
   },
   {
@@ -126,10 +130,7 @@
    "source": [
     "---\n",
     "\n",
-    "### Machine learning\n",
-    "\n",
-    "* Scikit-learn\n",
-    "* TensorFlow / PyTorch"
+    "### Machine learning"
    ]
   },
   {
@@ -146,34 +147,7 @@
     "---\n",
     "---\n",
     "\n",
-    "## Meta-data: reading & writing\n",
-    "\n",
-    "* Blog post\n",
-    "* Social media discussion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "---\n",
-    "\n",
-    "## 2-Hour Job Search\n",
-    "\n",
-    "* LAMP List\n",
-    "* Job applications\n",
-    "* Networking"
+    "## 2-Hour Job Search"
    ]
   },
   {
