--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "## Daily practices\n",
     "\n",
-    "* [ ] [Meta-data: reading & writing](#Meta-data:-reading-&-writing)\n",
+    "* [ ] [Meta-data: read & write](#Meta-data:-reading-&-writing)\n",
     "* [ ] [Practice & learn](#Practice-&-learn)\n",
     "  * [ ] Coding, algorithms & data structures\n",
     "  * [ ] Data science: access, manipulation, analysis, visualization\n",
@@ -25,7 +25,7 @@
     "  * [ ] Interview questions (out loud)\n",
     "* [ ] [2-Hour Job Search](#2-Hour-Job-Search)\n",
     "  * [ ] LAMP List\n",
-    "  * [ ] Networking\n",
+    "  * [ ] Network\n",
     "  * [ ] Social media\n",
     "  * [ ] Job applications"
    ]
@@ -37,7 +37,7 @@
     "---\n",
     "---\n",
     "\n",
-    "## Meta-data: reading & writing"
+    "## Meta-data: read & write"
    ]
   },
   {
