Moved job search section to top of template

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -16,19 +16,49 @@
     "\n",
     "## Daily practices\n",
     "\n",
+    "* [ ] [Job Search](#2-Hour-Job-Search)\n",
+    "  * [ ] LAMP List\n",
+    "  * [ ] Network\n",
+    "  * [ ] Social media\n",
+    "  * [ ] Job applications\n",
     "* [ ] [Meta-data: read & write](#Meta-data:-reading-&-writing)\n",
     "* [ ] [Practice & learn](#Practice-&-learn)\n",
     "  * [ ] Coding, algorithms & data structures\n",
     "  * [ ] Data science: access, manipulation, analysis, visualization\n",
     "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
     "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
-    "  * [ ] Interview questions (out loud)\n",
-    "* [ ] [2-Hour Job Search](#2-Hour-Job-Search)\n",
-    "  * [ ] LAMP List\n",
-    "  * [ ] Network\n",
-    "  * [ ] Social media\n",
-    "  * [ ] Job applications"
+    "  * [ ] Interview questions (out loud)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "\n",
+    "## 2-Hour Job Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -138,36 +168,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "---\n",
-    "\n",
-    "## 2-Hour Job Search"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   },
   {
