Worked on Chapter 3 of statistical thinking in python

--- a/ds/practice/interview_prep/interview_questions.ipynb
+++ b/ds/practice/interview_prep/interview_questions.ipynb
@@ -38,7 +38,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* What are 5 predictions you have for the next 20 years?\n",
+    "* What is survivorship bias and why is it important?\n",
+    "* What layers make up a CNN?\n",
+    "* Explain how you'd design an experiment to determine user behavior.\n",
+    "* How are extrapolation and interpolation different?"
+   ]
   },
   {
    "cell_type": "markdown",
