The job search, day 23

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -27,7 +27,8 @@
     "  * [ ] Data science: access, manipulation, analysis, visualization\n",
     "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
     "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
-    "  * [ ] Interview questions (out loud)"
+    "  * [ ] Interview questions (out loud)\n",
+    "    * STAR storytelling"
    ]
   },
   {
