Added coursework to main notebook

--- a/ds/courses/datacamp/statistical_thinking/statistical_thinking_part2.ipynb
+++ b/ds/courses/datacamp/statistical_thinking/statistical_thinking_part2.ipynb
@@ -1206,7 +1206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generating bootstrap replicats and visualizing bootstrap samples"
+    "Generating bootstrap replicates and visualizing bootstrap samples"
    ]
   },
   {
