The job search, day 25

--- a/ds/practice/interview_prep/interview_questions.ipynb
+++ b/ds/practice/interview_prep/interview_questions.ipynb
@@ -266,7 +266,7 @@
     "    * What variables will be involved?\n",
     "5. Develop experimental task & procedure\n",
     "    * What algorithms and techniques best support the experiment design\n",
-    "6. Detemine data manipulation & measurements\n",
+    "6. Determine data manipulation & measurements\n",
     "7. Analyze results"
    ]
   },
