Split out practices into daily and weekly

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -14,7 +14,14 @@
     "---\n",
     "---\n",
     "\n",
-    "## Daily practices\n",
+    "## Practices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Daily\n",
     "\n",
     "* [ ] [Job Search](#2-Hour-Job-Search)\n",
     "  * [ ] LAMP List\n",
@@ -29,6 +36,16 @@
     "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
     "  * [ ] Interview questions (out loud)\n",
     "    * STAR storytelling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weekly\n",
+    "\n",
+    "Vim command(s) I'll get familiar with this week:\n",
+    "\n"
    ]
   },
   {
