Small modification to template

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -24,7 +24,7 @@
     "### Daily\n",
     "\n",
     "* [ ] [Job Search](#2-Hour-Job-Search)\n",
-    "  * [ ] LAMP List\n",
+    "  * [ ] 2HJS progress\n",
     "  * [ ] Network\n",
     "  * [ ] Social media\n",
     "* [ ] [Meta-data: read & write](#Meta-data:-reading-&-writing)\n",
@@ -33,8 +33,7 @@
     "  * [ ] Data science: access, manipulation, analysis, visualization\n",
     "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
     "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
-    "  * [ ] Interview questions (out loud)\n",
-    "    * STAR storytelling"
+    "  * [ ] Interview questions, STAR storytelling"
    ]
   },
   {
