The job search, day 37

--- a/ds/practice/daily_practice/20-08/20-08-11-224-tue.ipynb
+++ b/ds/practice/daily_practice/20-08/20-08-11-224-tue.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 20-08-10: Daily Practice"
+    "# 20-08-11: Daily Practice"
    ]
   },
   {
@@ -24,16 +24,16 @@
     "### Daily\n",
     "\n",
     "* [x] [Job Search](#2-Hour-Job-Search)\n",
-    "  * [ ] 2HJS progress\n",
+    "  * [x] 2HJS progress\n",
     "  * [x] Network\n",
     "  * [x] Social media\n",
-    "* [ ] [Meta-data: read & write](#Meta-data:-reading-&-writing)\n",
+    "* [x] [Meta-data: read & write](#Meta-data:-reading-&-writing)\n",
     "* [ ] [Practice & learn](#Practice-&-learn)\n",
-    "  * [x] Coding, algorithms & data structures\n",
-    "  * [ ] Data science: access, manipulation, analysis, visualization\n",
+    "  * [ ] Coding, algorithms & data structures\n",
+    "  * [ ] Interview questions, STAR storytelling\n",
+    "  * [x] Data science: access, manipulation, analysis, visualization\n",
     "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
-    "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
-    "  * [ ] Interview questions, STAR storytelling"
+    "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch"
    ]
   },
   {
@@ -68,20 +68,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resume\n",
+    "### Resume & Applications\n",
     "\n",
-    "Before submitting an application for a rather exciting position, I decided to update/modify my resume a bit based on some feedback I got last week. Basically, to make room for more detail in my experience section, I removed one of my projects and split up my experience into \"Tech\" and \"Other\". I don't go into any detail on the Other experience, and now go into a bit more detail in the Tech experience."
+    "* Finished polishing the new version of my resume and used it to apply to a big job opportunity.\n",
+    "* Received confirmation that my referral went through on another cool opportunity."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "### NetWorks\n",
+    "\n",
+    "Lots of great networking again today. More referrals in the pipeline, along with a couple of new opportunities that came somewhat out of the blue."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,7 +101,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Savor Data Exploration, Part 1\n",
+    "\n",
+    "Started a new blog post, the first part of a series based on the Savor Data project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Blog Posted\n",
+    "\n",
+    "I posted my RMBG blog post to all of my social media channels today, with a brief little writeup about it. Inspired a new idea to put into the \"Further Work\" section: an app that semi-randomly combines multiple images into a collage. That would be fun to build!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +128,9 @@
     "---\n",
     "---\n",
     "\n",
-    "## Practice & learn"
+    "## Practice & learn\n",
+    "\n",
+    "Didn't do much in the way of technical practice today. With some very technical job prospects on the horizon, tomorrow will be the first day of my new regimen: daily whiteboarding, brain teasers, algorithms, data science, and model building."
    ]
   },
   {
@@ -128,11 +143,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Continued on the introductory videos of a course on edX: Advanced Algorithmics and Graph Theory with Python."
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -160,11 +175,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Savor Data\n",
+    "\n",
+    "Continued to work on the first part of the Savor Data exploration blog post, including looking at and deciding how to deal with nulls and some other initial wranglings."
+   ]
   },
   {
    "cell_type": "markdown",
